2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* Locations.xml.in: Fix zone code for Washington
	and Dulles Airport. Closes bug #367777. Patch from
	Sebastien Bacher.

2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* docs/C/gweather.xml: The forecast menu entry was
	renamed to Details. Reported by Changwoo Ryu. Closes
	bug #489402.

2007-12-31  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.
	
2007-12-03  Callum McKenzie  <callum@spooky-possum.org>

	* docs/C/gweather.xml: Better abstract courtesy of Andreas
	Freund. (Bug #500811)

2007-12-02  Changwoo Ryu  <cwryu@debian.org>

	* docs/Makefile.am (DOC_LINGUAS): Added ko.
	* docs/ko/ko.po: gnome-doc-utils migration from the old Sun
	manual, and udpated translation.
	* docs/ko/*.xml: Removed old XMLs.
	* docs/ko/figures/*.png: Removed old images.

2007-11-27  Callum McKenzie  <callum@spooky-possum.org>

	* Locations.xml.in: Added Kip's home town: White
	Rock. (Bug #499836).

2007-11-22  Callum McKenzie  <callum@spooky-possum.org>

	* gweather-pref.c (gweather_pref_create): The preferences dialog
	has been set resizable to make navigation of the locations list
	easier. See bug #462850.

	* gweather-dialog.c (gweather_dialog_create): Remove a superfluous
	call to gtk_window_set_policy.

2007-11-18  Callum McKenzie  <callum@spooky-possum.org>

	* Locations.xml.in: We misspelled Fort Worth!?. (Bug #497765)

2007-11-16  James Ogley  <james@usr-local-bin.org>
 
 	* Locations.xml.in: Rename Nottingham East Midlands as East Midlands.
 
2007-11-04  Callum McKenzie  <callum@spooky-possum.org>

	* gweather-pref.c: Remove an unneeded #include of langinfo.h.

	* Locations.xml.in: Added forecast zone for West Plains,
	Missouri. Thanks to Michael Crider (Bug #453539). In addition,
	best-estimates of the appropriate zones for most other Missouri
	locations where added where missing.

2007-10-13  Callum McKenzie  <callum@spooky-possum.org>
