@@ -24655,6 +24655,14 @@
 <region>
   <_name>Asia</_name>
   <country>
+    <_name>Armenia</_name>
+    <location>
+      <_name>Yerevan</_name>
+      <code>UDYZ</code>
+      <coordinates>40-09N 044-24E</coordinates>
+    </location>
+  </country>
+  <country>
     <_name>Afghanistan</_name>
     <location>
       <_name>Herat</_name>
@@ -26026,7 +26034,7 @@
   <country>
     <_name>Mongolia</_name>
     <location>
-      <_name>Ulan-Bator</_name>
+      <_name>Ulan Bator</_name>
       <code>ZMUB</code>
       <coordinates>47-51N 106-46E</coordinates>
     </location>
