@@ -1,5 +1,11 @@
 2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>
 
+	* Locations.xml.in: Add Yerevan in Armenia.
+	Patch from petrosyan at gmail com.
+	Closes bug #414814.
+
+2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>
+
 	* Locations.xml.in: Fix zone code for Washington
 	and Dulles Airport. Closes bug #367777. Patch from
 	Sebastien Bacher.
